Middlewares and basic folders created

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,13 @@
 /*AQUI DEBERÍAS PONER TUS CLAVES*/
+
+URL_MONGO=
+ULTRA_SECRET_KEY=
+URL_RECOVER=
+DB__HOST=
+DB__USER=
+DB__PASSWORD=
+DB__PORT=
+DB__DATABASE=
+CLIENT_ID=
+CLIENT_SECRET=
+BASE_URL=
